src/test/ui/macros/missing-comma.stderr
error: no rules expected the token `a`
  --> $DIR/missing-comma.rs:12:19
   |
LL |     println!("{}" a);
   |                  -^
   |                  |
   |                  help: missing comma here

error: aborting due to previous error

